refactor: v4 initial release

--- a/pug/_partials/breadcrumb.pug
+++ b/pug/_partials/breadcrumb.pug
@@ -1,8 +1,7 @@
 // Breadcrumb
-ol.breadcrumb.border-0.m-0
-  li.breadcrumb-item Home
-  if !starter
+nav(aria-label="breadcrumb")
+  ol.breadcrumb.border-0.m-0
+    li.breadcrumb-item Home
     li.breadcrumb-item
       a(href="#") Admin
     li.breadcrumb-item.active Dashboard
-    // Breadcrumb Menu
