--- a/pug/charts.pug
+++ b/pug/charts.pug
@@ -8,59 +8,58 @@ block scripts
   script(src='js/charts.js')
 
 block view
-  .fade-in
-    .card-columns.cols-2
-      .card
-        .card-header
-          | Line Chart
-          .card-header-actions
-            a.card-header-action(href='http://www.chartjs.org', target='_blank')
-              small.text-muted docs
-        .card-body
-          .c-chart-wrapper
-            canvas#canvas-1
-      .card
-        .card-header
-          | Bar Chart
-          .card-header-actions
-            a.card-header-action(href='http://www.chartjs.org', target='_blank')
-              small.text-muted docs
-        .card-body
-          .c-chart-wrapper
-            canvas#canvas-2
-      .card
-        .card-header
-          | Doughnut Chart
-          .card-header-actions
-            a.card-header-action(href='http://www.chartjs.org', target='_blank')
-              small.text-muted docs
-        .card-body
-          .c-chart-wrapper
-            canvas#canvas-3
-      .card
-        .card-header
-          | Radar Chart
-          .card-header-actions
-            a.card-header-action(href='http://www.chartjs.org', target='_blank')
-              small.text-muted docs
-        .card-body
-          .c-chart-wrapper
-            canvas#canvas-4
-      .card
-        .card-header
-          | Pie Chart
-          .card-header-actions
-            a.card-header-action(href='http://www.chartjs.org', target='_blank')
-              small.text-muted docs
-        .card-body
-          .c-chart-wrapper
-            canvas#canvas-5
-      .card
-        .card-header
-          | Polar Area Chart
-          .card-header-actions
-            a.card-header-action(href='http://www.chartjs.org', target='_blank')
-              small.text-muted docs
-        .card-body
-          .c-chart-wrapper
-            canvas#canvas-6
+  .card-columns.cols-2
+    .card.mb-4
+      .card-header
+        | Line Chart
+        .card-header-actions
+          a.card-header-action(href='http://www.chartjs.org', target='_blank')
+            small.text-muted docs
+      .card-body
+        .c-chart-wrapper
+          canvas#canvas-1
+    .card.mb-4
+      .card-header
+        | Bar Chart
+        .card-header-actions
+          a.card-header-action(href='http://www.chartjs.org', target='_blank')
+            small.text-muted docs
+      .card-body
+        .c-chart-wrapper
+          canvas#canvas-2
+    .card.mb-4
+      .card-header
+        | Doughnut Chart
+        .card-header-actions
+          a.card-header-action(href='http://www.chartjs.org', target='_blank')
+            small.text-muted docs
+      .card-body
+        .c-chart-wrapper
+          canvas#canvas-3
+    .card.mb-4
+      .card-header
+        | Radar Chart
+        .card-header-actions
+          a.card-header-action(href='http://www.chartjs.org', target='_blank')
+            small.text-muted docs
+      .card-body
+        .c-chart-wrapper
+          canvas#canvas-4
+    .card.mb-4
+      .card-header
+        | Pie Chart
+        .card-header-actions
+          a.card-header-action(href='http://www.chartjs.org', target='_blank')
+            small.text-muted docs
+      .card-body
+        .c-chart-wrapper
+          canvas#canvas-5
+    .card.mb-4
+      .card-header
+        | Polar Area Chart
+        .card-header-actions
+          a.card-header-action(href='http://www.chartjs.org', target='_blank')
+            small.text-muted docs
+      .card-body
+        .c-chart-wrapper
+          canvas#canvas-6
