--- a/pug/notifications/badge.pug
+++ b/pug/notifications/badge.pug
@@ -1,76 +1,75 @@
 extends /_layout/default.pug
 
 block view
-  .fade-in
-    .row
-      .col-lg-6
-        .card
-          .card-header
-            |  Bootstrap Badges
-            .card-header-actions
-              a.card-header-action(href='http://coreui.io/docs/components/bootstrap-badge/', target='_blank')
-                small.text-muted docs
-          .card-body
-            h1
-              | Example heading
-              span.badge.badge-secondary New
-            h2
-              | Example heading
-              span.badge.badge-secondary New
-            h3
-              | Example heading
-              span.badge.badge-secondary New
-            h4
-              | Example heading
-              span.badge.badge-secondary New
-            h5
-              | Example heading
-              span.badge.badge-secondary New
-            h6
-              | Example heading
-              span.badge.badge-secondary New
-          .card-footer
-            button.btn.btn-primary(type='link')
-              | Notifications
-              span.badge.badge-light.badge-pill(style='position: static;') 9
-      .col-lg-6
-        .card
-          .card-header
-            |  Bootstrap Badges
-            small contextual variations
-          .card-body
-            span.badge.badge-primary Primary
-            span.badge.badge-secondary Secondary
-            span.badge.badge-success Success
-            span.badge.badge-danger Danger
-            span.badge.badge-warning Warning
-            span.badge.badge-info Info
-            span.badge.badge-light Light
-            span.badge.badge-dark Dark
-        .card
-          .card-header
-            |  Bootstrap Badges
-            small pill badges
-          .card-body
-            span.badge.badge-pill.badge-primary Primary
-            span.badge.badge-pill.badge-secondary Secondary
-            span.badge.badge-pill.badge-success Success
-            span.badge.badge-pill.badge-danger Danger
-            span.badge.badge-pill.badge-warning Warning
-            span.badge.badge-pill.badge-info Info
-            span.badge.badge-pill.badge-light Light
-            span.badge.badge-pill.badge-dark Dark
-        .card
-          .card-header
-            |  Bootstrap Badges
-            small links
-          .card-body
-            a.badge.badge-primary(href='#') Primary
-            a.badge.badge-secondary(href='#') Secondary
-            a.badge.badge-success(href='#') Success
-            a.badge.badge-danger(href='#') Danger
-            a.badge.badge-warning(href='#') Warning
-            a.badge.badge-info(href='#') Info
-            a.badge.badge-light(href='#') Light
-            a.badge.badge-dark(href='#') Dark
-    // /.row
+  .row
+    .col-lg-6
+      .card.mb-4
+        .card-header
+          |  Bootstrap Badges
+          .card-header-actions
+            a.card-header-action(href='http://coreui.io/docs/components/bootstrap-badge/', target='_blank')
+              small.text-muted docs
+        .card-body
+          h1
+            | Example heading
+            span.badge.bg-secondary New
+          h2
+            | Example heading
+            span.badge.bg-secondary New
+          h3
+            | Example heading
+            span.badge.bg-secondary New
+          h4
+            | Example heading
+            span.badge.bg-secondary New
+          h5
+            | Example heading
+            span.badge.bg-secondary New
+          h6
+            | Example heading
+            span.badge.bg-secondary New
+        .card-footer
+          button.btn.btn-primary(type='link')
+            | Notifications
+            span.badge.bg-light.bg-pill(style='position: static;') 9
+    .col-lg-6
+      .card.mb-4
+        .card-header
+          |  Bootstrap Badges
+          small contextual variations
+        .card-body
+          span.badge.bg-primary Primary
+          span.badge.bg-secondary Secondary
+          span.badge.bg-success Success
+          span.badge.bg-danger Danger
+          span.badge.bg-warning Warning
+          span.badge.bg-info Info
+          span.badge.bg-light Light
+          span.badge.bg-dark Dark
+      .card.mb-4
+        .card-header
+          |  Bootstrap Badges
+          small pill badges
+        .card-body
+          span.badge.bg-pill.bg-primary Primary
+          span.badge.bg-pill.bg-secondary Secondary
+          span.badge.bg-pill.bg-success Success
+          span.badge.bg-pill.bg-danger Danger
+          span.badge.bg-pill.bg-warning Warning
+          span.badge.bg-pill.bg-info Info
+          span.badge.bg-pill.bg-light Light
+          span.badge.bg-pill.bg-dark Dark
+      .card.mb-4
+        .card-header
+          |  Bootstrap Badges
+          small links
+        .card-body
+          a.badge.bg-primary(href='#') Primary
+          a.badge.bg-secondary(href='#') Secondary
+          a.badge.bg-success(href='#') Success
+          a.badge.bg-danger(href='#') Danger
+          a.badge.bg-warning(href='#') Warning
+          a.badge.bg-info(href='#') Info
+          a.badge.bg-light(href='#') Light
+          a.badge.bg-dark(href='#') Dark
+  // /.row
