--- a/pug/register.pug
+++ b/pug/register.pug
@@ -4,32 +4,32 @@ block view
   .container
     .row.justify-content-center
       .col-md-6
-        .card.mx-4
+        .card.mb-4.mx-4
           .card-body.p-4
             h1 Register
             p.text-muted Create your account
             .input-group.mb-3
               .input-group-prepend
                 span.input-group-text
-                  svg.c-icon
+                  svg.icon
                     use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user")
               input.form-control(type='text', placeholder='Username')
             .input-group.mb-3
               .input-group-prepend
                 span.input-group-text
-                  svg.c-icon
+                  svg.icon
                     use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open")
               input.form-control(type='text', placeholder='Email')
             .input-group.mb-3
               .input-group-prepend
                 span.input-group-text
-                  svg.c-icon
+                  svg.icon
                     use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked")
               input.form-control(type='password', placeholder='Password')
             .input-group.mb-4
               .input-group-prepend
                 span.input-group-text
-                  svg.c-icon
+                  svg.icon
                     use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked")
               input.form-control(type='password', placeholder='Repeat password')
             button.btn.btn-block.btn-success(type='button') Create Account
