--- a/pug/_layout/default.pug
+++ b/pug/_layout/default.pug
@@ -7,13 +7,12 @@ html(lang='en')
     base(href=base)
     include ../_partials/head.pug
     block styles
-  body.c-app
+  body.bg-light
     include ../_partials/sidebar.pug
-    .c-wrapper.c-fixed-components
+    .wrapper.d-flex.flex-column.min-vh-100(data-coreui-reliant="sidebar")
       include ../_partials/header.pug
-      .c-body
-        main(class='c-main')
-          .container-fluid
-            block view
-        include ../_partials/footer.pug
+      .body.flex-grow-1.px-3
+        .container-lg
+          block view
+      include ../_partials/footer.pug
     include ../_partials/scripts.pug
