--- a/pug/_partials/banner.pug
+++ b/pug/_partials/banner.pug
@@ -1,6 +1,6 @@
 //
    * CoreUI - Free Bootstrap Admin Template
-   * @version v3.4.0
+   * @version v4.0.0-alpha.0
    * @link https://coreui.io
    * Copyright (c) 2020 creativeLabs Łukasz Holeczek
    * Licensed under MIT (https://coreui.io/license)
