--- a/pug/_partials/footer.pug
+++ b/pug/_partials/footer.pug
@@ -1,7 +1,7 @@
-footer.c-footer
+footer.footer
   div
     a(href='https://coreui.io') CoreUI
     |  &copy; 2020 creativeLabs.
-  div.ml-auto
+  div.ms-auto
     | Powered by&nbsp;
     a(href='https://coreui.io/') CoreUI
