--- a/pug/_partials/sidebar.pug
+++ b/pug/_partials/sidebar.pug
@@ -1,205 +1,206 @@
-.c-sidebar.c-sidebar-dark.c-sidebar-fixed.c-sidebar-lg-show#sidebar
-  .c-sidebar-brand.d-lg-down-none
-    svg.c-sidebar-brand-full(width="118" height="46" alt="CoreUI Logo")
+.sidebar.sidebar-dark.sidebar-fixed.sidebar-lg-show#sidebar
+  .sidebar-brand.d-lg-down-none
+    svg.sidebar-brand-full(width="118" height="46" alt="CoreUI Logo")
       use(xlink:href="assets/brand/coreui.svg#full")
-    svg.c-sidebar-brand-minimized(width="46" height="46" alt="CoreUI Logo")
+    svg.sidebar-brand-narrow(width="46" height="46" alt="CoreUI Logo")
       use(xlink:href="assets/brand/coreui.svg#signet")
-  ul.c-sidebar-nav
-    li.c-sidebar-nav-item
-      a.c-sidebar-nav-link(href=ajax ? 'main.html' : 'index.html')
-        svg.c-sidebar-nav-icon
+  ul.sidebar-nav(data-coreui="navigation")
+    li.nav-item
+      a.nav-link(href=ajax ? 'main.html' : 'index.html')
+        svg.nav-icon
           use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-speedometer")
         |  Dashboard
-        span.badge.badge-info NEW
-    li.c-sidebar-nav-title
+        span.badge.bg-info.ms-auto NEW
+    li.nav-title
       | Theme
-    li.c-sidebar-nav-item
-      a.c-sidebar-nav-link(href='colors.html')
-        svg.c-sidebar-nav-icon
+    li.nav-item
+      a.nav-link(href='colors.html')
+        svg.nav-icon
           use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-drop")
         |  Colors
-    li.c-sidebar-nav-item
-      a.c-sidebar-nav-link(href='typography.html')
-          svg.c-sidebar-nav-icon
+    li.nav-item
+      a.nav-link(href='typography.html')
+          svg.nav-icon
             use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-pencil")
           |  Typography
-    li.c-sidebar-nav-title
+    li.nav-title
       | Components
-    li.c-sidebar-nav-item.c-sidebar-nav-dropdown
-      a.c-sidebar-nav-link.c-sidebar-nav-dropdown-toggle(href='#')
-        svg.c-sidebar-nav-icon
+    li.nav-group
+      a.nav-link.nav-group-toggle(href='#')
+        svg.nav-icon
           use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-puzzle")
         |  Base
-      ul.c-sidebar-nav-dropdown-items
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='base/breadcrumb.html')
-            span.c-sidebar-nav-icon
+      ul.nav-group-items
+        li.nav-item
+          a.nav-link(href='base/accordion.html')
+            span.nav-icon
+            |  Accordion
+        li.nav-item
+          a.nav-link(href='base/breadcrumb.html')
+            span.nav-icon
             |  Breadcrumb
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='base/cards.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='base/cards.html')
+            span.nav-icon
             |  Cards
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='base/carousel.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='base/carousel.html')
+            span.nav-icon
             |  Carousel
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='base/collapse.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='base/collapse.html')
+            span.nav-icon
             |  Collapse
-        li.c-sidebar-nav-item
-            a.c-sidebar-nav-link(href='base/forms.html')
-              span.c-sidebar-nav-icon
+        li.nav-item
+            a.nav-link(href='base/forms.html')
+              span.nav-icon
               |  Forms
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='base/jumbotron.html')
-            span.c-sidebar-nav-icon
-            |  Jumbotron
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='base/list-group.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='base/list-group.html')
+            span.nav-icon
             |  List group
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='base/navs.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='base/navs.html')
+            span.nav-icon
             |  Navs
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='base/pagination.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='base/pagination.html')
+            span.nav-icon
             |  Pagination
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='base/popovers.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='base/popovers.html')
+            span.nav-icon
             |  Popovers
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='base/progress.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='base/progress.html')
+            span.nav-icon
             |  Progress
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='base/scrollspy.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='base/scrollspy.html')
+            span.nav-icon
             |  Scrollspy
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='base/switches.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='base/switches.html')
+            span.nav-icon
             |  Switches
-        li.c-sidebar-nav-item
-            a.c-sidebar-nav-link(href='base/tables.html')
-              span.c-sidebar-nav-icon
+        li.nav-item
+            a.nav-link(href='base/tables.html')
+              span.nav-icon
               |  Tables
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='base/tabs.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='base/tabs.html')
+            span.nav-icon
             |  Tabs
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='base/tooltips.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='base/tooltips.html')
+            span.nav-icon
             |  Tooltips
-    li.c-sidebar-nav-item.c-sidebar-nav-dropdown
-      a.c-sidebar-nav-link.c-sidebar-nav-dropdown-toggle(href='#')
-        svg.c-sidebar-nav-icon
+    li.nav-group
+      a.nav-link.nav-group-toggle(href='#')
+        svg.nav-icon
           use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-cursor")
         |  Buttons
-      ul.c-sidebar-nav-dropdown-items
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='buttons/buttons.html')
-            span.c-sidebar-nav-icon
+      ul.nav-group-items
+        li.nav-item
+          a.nav-link(href='buttons/buttons.html')
+            span.nav-icon
             |  Buttons
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='buttons/button-group.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='buttons/button-group.html')
+            span.nav-icon
             |  Buttons Group
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='buttons/dropdowns.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='buttons/dropdowns.html')
+            span.nav-icon
             |  Dropdowns
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='buttons/brand-buttons.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='buttons/brand-buttons.html')
+            span.nav-icon
             |  Brand Buttons
-    li.c-sidebar-nav-item
-      a.c-sidebar-nav-link(href='charts.html')
-        svg.c-sidebar-nav-icon
+    li.nav-item
+      a.nav-link(href='charts.html')
+        svg.nav-icon
           use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chart-pie")
         |  Charts
-    li.c-sidebar-nav-dropdown
-      a.c-sidebar-nav-dropdown-toggle(href='#')
-        svg.c-sidebar-nav-icon
+    li.nav-group
+      a.nav-link.nav-group-toggle(href='#')
+        svg.nav-icon
           use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-star")
         |  Icons
-      ul.c-sidebar-nav-dropdown-items
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='icons/coreui-icons-free.html')
+      ul.nav-group-items
+        li.nav-item
+          a.nav-link(href='icons/coreui-icons-free.html')
             |  CoreUI Icons
-            span.badge.badge-success Free
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='icons/coreui-icons-brand.html')
+            span.badge.bg-success.ms-auto Free
+        li.nav-item
+          a.nav-link(href='icons/coreui-icons-brand.html')
             |  CoreUI Icons - Brand
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='icons/coreui-icons-flag.html')
+        li.nav-item
+          a.nav-link(href='icons/coreui-icons-flag.html')
             |  CoreUI Icons - Flag
-    li.c-sidebar-nav-item.c-sidebar-nav-dropdown
-      a.c-sidebar-nav-link.c-sidebar-nav-dropdown-toggle(href='#')
-        svg.c-sidebar-nav-icon
+    li.nav-group
+      a.nav-link.nav-group-toggle(href='#')
+        svg.nav-icon
           use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
         |  Notifications
-      ul.c-sidebar-nav-dropdown-items
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='notifications/alerts.html')
-            span.c-sidebar-nav-icon
+      ul.nav-group-items
+        li.nav-item
+          a.nav-link(href='notifications/alerts.html')
+            span.nav-icon
             |  Alerts
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='notifications/badge.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='notifications/badge.html')
+            span.nav-icon
             |  Badge
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href='notifications/modals.html')
-            span.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href='notifications/modals.html')
+            span.nav-icon
             |  Modals
-    li.c-sidebar-nav-item
-      a.c-sidebar-nav-link(href='widgets.html')
-        svg.c-sidebar-nav-icon
+    li.nav-item
+      a.nav-link(href='widgets.html')
+        svg.nav-icon
           use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-calculator")
         |  Widgets
-        span.badge.badge-info NEW
-    li.c-sidebar-nav-divider
-    li.c-sidebar-nav-title
+        span.badge.bg-info.ms-auto NEW
+    li.nav-divider
+    li.nav-title
       | Extras
-    li.c-sidebar-nav-item.c-sidebar-nav-dropdown
-      a.c-sidebar-nav-link.c-sidebar-nav-dropdown-toggle(href='#')
-        svg.c-sidebar-nav-icon
+    li.nav-group
+      a.nav-link.nav-group-toggle(href='#')
+        svg.nav-icon
           use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-star")
         |  Pages
-      ul.c-sidebar-nav-dropdown-items
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href=ajax ? 'login.html' : 'login.html' target="_top")
-            svg.c-sidebar-nav-icon
+      ul.nav-group-items
+        li.nav-item
+          a.nav-link(href=ajax ? 'login.html' : 'login.html' target="_top")
+            svg.nav-icon
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-account-logout")
             |  Login
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href=ajax ? 'register.html' : 'register.html' target="_top")
-            svg.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href=ajax ? 'register.html' : 'register.html' target="_top")
+            svg.nav-icon
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-account-logout")
             |  Register
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href=ajax ? '404.html' : '404.html' target="_top")
-            svg.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href=ajax ? '404.html' : '404.html' target="_top")
+            svg.nav-icon
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bug")
             |  Error 404
-        li.c-sidebar-nav-item
-          a.c-sidebar-nav-link(href=ajax ? '500.html' : '500.html' target="_top")
-            svg.c-sidebar-nav-icon
+        li.nav-item
+          a.nav-link(href=ajax ? '500.html' : '500.html' target="_top")
+            svg.nav-icon
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bug")
             |  Error 500
-    li.c-sidebar-nav-item.mt-auto
-      a.c-sidebar-nav-link.c-sidebar-nav-link-success(href="https://coreui.io" target="_top")
-        svg.c-sidebar-nav-icon
+    li.nav-item.mt-auto
+      a.nav-link.nav-link-success(href="https://coreui.io" target="_top")
+        svg.nav-icon
           use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-cloud-download")
         |  Download CoreUI
-    li.c-sidebar-nav-item
-      a.c-sidebar-nav-link.c-sidebar-nav-link-danger(href="https://coreui.io/pro/" target="_top")
-        svg.c-sidebar-nav-icon
+    li.nav-item
+      a.nav-link.nav-link-danger(href="https://coreui.io/pro/" target="_top")
+        svg.nav-icon
           use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-layers")
         |  Try CoreUI
-        strong PRO
-  button.c-sidebar-minimizer.c-class-toggler(type="button" data-target="_parent" data-class="c-sidebar-minimized")
+        .fw-semibold PRO
+  //- button.sidebar-minimizer.c-class-toggler(type="button" data-coreui-target="_parent" data-class="c-sidebar-minimized")
+  button.sidebar-toggler(type="button" data-coreui-toggle="narrow")
