refactor: update sidebar toggler

--- a/pug/_partials/sidebar.pug
+++ b/pug/_partials/sidebar.pug
@@ -202,5 +202,4 @@
           use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-layers")
         |  Try CoreUI
         .fw-semibold PRO
-  //- button.sidebar-minimizer.c-class-toggler(type="button" data-coreui-target="_parent" data-class="c-sidebar-minimized")
-  button.sidebar-toggler(type="button" data-coreui-toggle="narrow")
+  button.sidebar-toggler(type="button" data-coreui-toggle="unfoldable")
