--- a/pug/index.pug
+++ b/pug/index.pug
@@ -353,6 +353,7 @@ block view
                   th Usage
                   th.text-center Payment Method
                   th Activity
+                  th
               tbody
                 tr.align-middle
                   td.text-center
@@ -381,6 +382,15 @@ block view
                   td
                     .small.text-muted Last login
                     .fw-semibold 10 sec ago
+                  td
+                    .dropdown
+                      button.btn.btn-transparent.p-0(type='button', data-coreui-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+                        svg.icon
+                          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-options")
+                      .dropdown-menu.dropdown-menu-end
+                        a.dropdown-item(href='#') Info
+                        a.dropdown-item(href='#') Edit
+                        a.dropdown-item.text-danger(href='#') Delete
                 tr.align-middle
                   td.text-center
                     .avatar
@@ -408,6 +418,15 @@ block view
                   td
                     .small.text-muted Last login
                     .fw-semibold 5 minutes ago
+                  td
+                    .dropdown
+                      button.btn.btn-transparent.p-0(type='button', data-coreui-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+                        svg.icon
+                          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-options")
+                      .dropdown-menu.dropdown-menu-end
+                        a.dropdown-item(href='#') Info
+                        a.dropdown-item(href='#') Edit
+                        a.dropdown-item.text-danger(href='#') Delete
                 tr.align-middle
                   td.text-center
                     .avatar
@@ -435,6 +454,15 @@ block view
                   td
                     .small.text-muted Last login
                     .fw-semibold 1 hour ago
+                  td
+                    .dropdown
+                      button.btn.btn-transparent.p-0(type='button', data-coreui-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+                        svg.icon
+                          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-options")
+                      .dropdown-menu.dropdown-menu-end
+                        a.dropdown-item(href='#') Info
+                        a.dropdown-item(href='#') Edit
+                        a.dropdown-item.text-danger(href='#') Delete
                 tr.align-middle
                   td.text-center
                     .avatar
@@ -462,6 +490,15 @@ block view
                   td
                     .small.text-muted Last login
                     .fw-semibold Last month
+                  td
+                    .dropdown
+                      button.btn.btn-transparent.p-0(type='button', data-coreui-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+                        svg.icon
+                          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-options")
+                      .dropdown-menu.dropdown-menu-end
+                        a.dropdown-item(href='#') Info
+                        a.dropdown-item(href='#') Edit
+                        a.dropdown-item.text-danger(href='#') Delete
                 tr.align-middle
                   td.text-center
                     .avatar
@@ -489,6 +526,15 @@ block view
                   td
                     .small.text-muted Last login
                     .fw-semibold Last week
+                  td
+                    .dropdown.dropup
+                      button.btn.btn-transparent.p-0(type='button', data-coreui-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+                        svg.icon
+                          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-options")
+                      .dropdown-menu.dropdown-menu-end
+                        a.dropdown-item(href='#') Info
+                        a.dropdown-item(href='#') Edit
+                        a.dropdown-item.text-danger(href='#') Delete
                 tr.align-middle
                   td.text-center
                     .avatar
@@ -516,5 +562,14 @@ block view
                   td
                     .small.text-muted Last login
                     .fw-semibold Yesterday
+                  td
+                    .dropdown.dropup
+                      button.btn.btn-transparent.p-0(type='button', data-coreui-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+                        svg.icon
+                          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-options")
+                      .dropdown-menu.dropdown-menu-end
+                        a.dropdown-item(href='#') Info
+                        a.dropdown-item(href='#') Edit
+                        a.dropdown-item.text-danger(href='#') Delete
     // /.col
   // /.row
