refactor: update utility classes to v4

--- a/pug/_partials/header.pug
+++ b/pug/_partials/header.pug
@@ -13,7 +13,7 @@ header.header.header-sticky.mb-4
         a.nav-link(href="#") Users
       li.nav-item
         a.nav-link(href="#") Settings
-    ul.header-nav.ms-auto.mr-4
+    ul.header-nav.ms-auto.me-4
       li.nav-item.d-md-down-none
         a.nav-link(href="#")
           svg.icon
@@ -34,52 +34,52 @@ header.header.header-sticky.mb-4
           .dropdown-header.bg-light.py-2
             .fw-semibold Account
           a.dropdown-item(href="#")
-            svg.icon.mr-2
+            svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
             |  Updates
             span.badge.bg-info.ms-auto 42
           a.dropdown-item(href="#")
-            svg.icon.mr-2
+            svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open")
             |  Messages
             span.badge.bg-success.ms-auto 42
           a.dropdown-item(href="#")
-            svg.icon.mr-2
+            svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-task")
             |  Tasks
             span.badge.bg-danger.ms-auto 42
           a.dropdown-item(href="#")
-            svg.icon.mr-2
+            svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-comment-square")
             |  Comments
             span.badge.bg-warning.ms-auto 42
           .dropdown-header.bg-light.py-2
             .fw-semibold Settings
           a.dropdown-item(href="#")
-            svg.icon.mr-2
+            svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user")
             |  Profile
           a.dropdown-item(href="#")
-            svg.icon.mr-2
+            svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
             |  Settings
           a.dropdown-item(href="#")
-            svg.icon.mr-2
+            svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-credit-card")
             |  Payments
             span.badge.bg-secondary.ms-auto 42
           a.dropdown-item(href="#")
-            svg.icon.mr-2
+            svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-file")
             |  Projects
             span.badge.bg-primary.ms-auto 42
           .dropdown-divider
           a.dropdown-item(href="#")
-            svg.icon.mr-2
+            svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked")
             |  Lock Account
           a.dropdown-item(href="#")
-            svg.icon.mr-2
+            svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-account-logout")
             |  Logout
   .header-divider
