--- a/pug/buttons/button-group.pug
+++ b/pug/buttons/button-group.pug
@@ -20,19 +20,19 @@ block view
           small toolbar
         .card-body
           .btn-toolbar.mb-3(role='toolbar', aria-label='Toolbar with button groups')
-            .btn-group.mr-2(role='group', aria-label='First group')
+            .btn-group.me-2(role='group', aria-label='First group')
               button.btn.btn-secondary(type='button') 1
               button.btn.btn-secondary(type='button') 2
               button.btn.btn-secondary(type='button') 3
               button.btn.btn-secondary(type='button') 4
-            .btn-group.mr-2(role='group', aria-label='Second group')
+            .btn-group.me-2(role='group', aria-label='Second group')
               button.btn.btn-secondary(type='button') 5
               button.btn.btn-secondary(type='button') 6
               button.btn.btn-secondary(type='button') 7
             .btn-group(role='group', aria-label='Third group')
               button.btn.btn-secondary(type='button') 8
           .btn-toolbar.mb-3(role='toolbar', aria-label='Toolbar with button groups')
-            .btn-group.mr-2(role='group', aria-label='First group')
+            .btn-group.me-2(role='group', aria-label='First group')
               button.btn.btn-secondary(type='button') 1
               button.btn.btn-secondary(type='button') 2
               button.btn.btn-secondary(type='button') 3
