--- a/pug/buttons/dropdowns.pug
+++ b/pug/buttons/dropdowns.pug
@@ -166,7 +166,7 @@ block view
                 .dropdown-divider
                 a.dropdown-item(href='#') Separated link
             // /btn-group
-            .btn-group.ml-2
+            .btn-group.ms-2
               button.btn.btn-lg.btn-secondary(type='button') Large split button
               button.btn.btn-lg.btn-secondary.dropdown-toggle.dropdown-toggle-split(type='button', data-coreui-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
                 span.visually-hidden Toggle Dropdown
@@ -190,7 +190,7 @@ block view
                 .dropdown-divider
                 a.dropdown-item(href='#') Separated link
             // /btn-group
-            .btn-group.ml-2
+            .btn-group.ms-2
               button.btn.btn-sm.btn-secondary(type='button') Small split button
               button.btn.btn-sm.btn-secondary.dropdown-toggle.dropdown-toggle-split(type='button', data-coreui-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
                 span.visually-hidden Toggle Dropdown
@@ -269,10 +269,10 @@ block view
               | Menu forms
             .dropdown-menu
               form.px-4.py-3
-                .form-group
+                .mb-3
                   label(for='exampleDropdownFormEmail1') Email address
                   input#exampleDropdownFormEmail1.form-control(type='email', placeholder='email@example.com')
-                .form-group
+                .mb-3
                   label(for='exampleDropdownFormPassword1') Password
                   input#exampleDropdownFormPassword1.form-control(type='password', placeholder='Password')
                 .form-check
