--- a/pug/404.pug
+++ b/pug/404.pug
@@ -5,7 +5,7 @@ block view
     .row.justify-content-center
       .col-md-6
         .clearfix
-          h1.float-start.display-3.mr-4 404
+          h1.float-start.display-3.me-4 404
           h4.pt-3 Oops! You're lost.
           p.text-muted The page you are looking for was not found.
         .input-prepend.input-group
