--- a/pug/500.pug
+++ b/pug/500.pug
@@ -5,7 +5,7 @@ block view
     .row.justify-content-center
       .col-md-6
         .clearfix
-          h1.float-start.display-3.mr-4 500
+          h1.float-start.display-3.me-4 500
           h4.pt-3 Houston, we have a problem!
           p.text-muted The page you are looking for is temporarily unavailable.
         .input-prepend.input-group
