fix: wrong indentation

--- a/pug/base/forms.pug
+++ b/pug/base/forms.pug
@@ -594,37 +594,37 @@ block view
           form.form-horizontal
             .mb-3
               label.form-label(for='prependedInput') Prepended text
-              .input-prepend.input-group
-                  span.input-group-text @
-                  input#prependedInput.form-control(size='16', type='text')
-                span.form-text Here's some help text
+              .input-group
+                span.input-group-text @
+                input#prependedInput.form-control(size='16', type='text')
+              span.form-text Here's some help text
 
             .mb-3
               label.form-label(for='appendedInput') Appended text
               .input-group
-                  input#appendedInput.form-control(size='16', type='text')
-                  span.input-group-text .00
-                span.form-text Here's more help text
+                input#appendedInput.form-control(size='16', type='text')
+                span.input-group-text .00
+              span.form-text Here's more help text
 
             .mb-3
               label.form-label(for='appendedPrependedInput') Append and prepend
-              .input-prepend.input-group
-                  span.input-group-text $
-                  input#appendedPrependedInput.form-control(size='16', type='text')
-                  span.input-group-text .00
+              input-group
+                span.input-group-text $
+                input#appendedPrependedInput.form-control(size='16', type='text')
+                span.input-group-text .00
 
             .mb-3
               label.form-label(for='appendedInputButton') Append with button
               .input-group
-                  input#appendedInputButton.form-control(size='16', type='text')
-                  button.btn.btn-secondary(type='button') Go!
+                input#appendedInputButton.form-control(size='16', type='text')
+                button.btn.btn-secondary(type='button') Go!
 
             .mb-3
               label.form-label(for='appendedInputButtons') Two-button append
               .input-group
-                  input#appendedInputButtons.form-control(size='16', type='text')
-                  button.btn.btn-secondary(type='button') Search
-                  button.btn.btn-secondary(type='button') Options
+                input#appendedInputButtons.form-control(size='16', type='text')
+                button.btn.btn-secondary(type='button') Search
+                button.btn.btn-secondary(type='button') Options
 
             .form-actions
               button.btn.btn-primary(type='submit') Save changes
